--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,31 @@ nav {
     background-color: #eee;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 10px;
+}
+
+.prog {
+    position: relative;
+    width: 34px;
+    height: 34px;
+    background-color: #ffffff;
+    display: none;
+    padding: 6px;
+    flex-wrap: wrap;
+    align-items: center;
+    cursor: pointer;
+}
+
+.prog:hover span {
+    background-color: #00000083;
+}
+
+.prog span {
+    width: 100%;
+    height: 2px;
+    background-color: #333;
+    transition: .3s;    
 }
 
 nav .logo {
@@ -49,6 +73,80 @@ nav ul li a:hover, .activ {
     border-bottom: 2px solid #009688;
 }
 
+.links span {
+    cursor: pointer;
+    display: none;
+}
+
+
+@media (max-width: 576px) {
+    .prog {
+        display: flex;
+    }
+    nav:not(nav ul) {
+        background-color: #eee;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px;
+    }
+    nav ul{
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        background-color: #333;
+        z-index: 999999;
+        position: fixed;
+        top: 0;
+        left: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        transition: .3s;
+        transform: translateY(-100%);
+    }
+    .open {
+        transform: translateY(0);
+    }
+    .links span {
+        position: absolute;
+        top: 28px;
+        right: 28px;
+        width: 40px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 30px;
+        color: white;
+        border: 1px solid #fff;
+        border-radius: 50%;
+        transition: .3s;
+    }
+    .links span:hover {
+        border-color: #f44336;
+        color: #f44336;
+    }
+    nav ul li {
+        margin: 0;
+        font-size: 26px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        padding: 5px;
+    }
+    nav ul li:hover{
+        background-color: rgba(0, 0, 0, 0.432);
+        border: 0;
+    }
+    nav ul li:hover a {
+        border: 0;
+    }
+    .activ {
+        border-bottom: 0;
+    }
+}
+
 .main-content {
     display: flex;
     margin: 20px;
@@ -72,11 +170,20 @@ nav ul li a:hover, .activ {
     font-size: 45px;
     color: #0090d3;
 }
+@media (max-width: 576px) {
+    .main-content .info {
+        width: 46%;
+        height: 12em;
+    }
+    .main-content .info h1 {
+        font-size: 35px;
+    }
+}
 
 footer {
     background-color: #009688;
     padding: 8px;
-    margin-top: 10px;
+    margin-top: 30px;
     width: 100%;
     text-align: center;
 }
